workloads/default/travelwise-site.vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: travelwise-site
  namespace: default
  labels:
    app: travelwise
    component: site

spec:
  gateways:
    - primary.istio-system
    - secondary.istio-system
  hosts: ["travelwise.stevenxie.me"]
  http:
    - route:
        - destination:
            host: travelwise.netlify.com
          headers:
            response:
              set:
                X-Service: travelwise-site
